# U731-Server

./: .gitignore  README.md  Requirements.md  emailer.py  main.py  models.py  pyproject.toml  requirements.txt
supportJSFiles/: index.js
templates/: baseXNav.html  error.html  feedbackDetail.html  index.html  list.html
templates/emails/: feedbackReceived.html
